nambahkan link untuk manstanding

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <article id="info-mother">
         <h2 class="info-child" id="info-title">The Best Tour Company For Your Family</h2>
-        <img class="info-child" id="info-img" src="image/manStanding.jpg" alt="Man Standing">
+        <img class="info-child" id="info-img" src="https://github.com/Luki26-png/TourWeb-repo/blob/main/manStanding.jpg?raw=true" alt="Man Standing">
 
         <p class="info-child" id="info-text">
             Whether you are here for a visit, family matters or business,
