add link for cards

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <section id="card-container">
 
             <section class="tour-card" id="card1">
-                <img src="image/card1_img.jpg" alt="card_image"></img>
+                <img src="https://github.com/Luki26-png/TourWeb-repo/blob/main/card1_img.jpg?raw=true" alt="card_image"></img>
 
                 <h3>Whitehorse City Surrounds Tour</h3>
 
@@ -115,7 +115,7 @@
             </section>
 
             <section class="tour-card" id="card2">
-                <img src="image/card2_img.jpg" alt="card_image"></img>
+                <img src="https://github.com/Luki26-png/TourWeb-repo/blob/main/card2_img.jpg?raw=true" alt="card_image"></img>
 
                 <h3>Yukon Wildlife Preserve And Hot Spring</h3>
 
@@ -129,7 +129,7 @@
             </section>
 
             <section class="tour-card" id="card3">
-                <img src="image/card3_img.jpg" alt="card_image"></img>
+                <img src="https://github.com/Luki26-png/TourWeb-repo/blob/main/card3_img.jpg?raw=true" alt="card_image"></img>
 
                 <h3>Carcross/Southern Lakes Tour</h3>
 
